[package]
name = "purveyor"
description = "Macros to generate server and client code from a simple protocol definition"
license-file = "LICENSE"
repository = "https://github.com/MDM23/purveyor"
version = "0.1.3"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
paste = "1.0"

[dev-dependencies]
tokio = { version = "1.38", features = ["rt", "macros"] }